# rsmod-pathfinder

./: .gitignore  Cargo.toml  README.md  asconfig.json  lumbridge.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: bench.yml
.run/: Build WASM.run.xml  Debug.run.xml  Release.run.xml
assembly/: Line.ts  LinePathFinder.ts  LineValidator.ts  LocAngle.ts  LocShape.ts  PathFinder.ts  StepValidator.ts  index.ts
assembly/collision/: CollisionFlagMap.ts  CollisionStrategies.ts  CollisionStrategy.ts
assembly/flag/: BlockAccessFlag.ts  CollisionFlag.ts  DirectionFlag.ts
assembly/reach/: ReachStrategy.ts  RectangleBoundaryUtils.ts
assembly/utils/: RotationUtils.ts
benches/: collision.rs  pathfinder.rs
src/: index.ts  lib.rs  main.js  main.rs  rsmod.rs  rsmod.wat
src/rsmod/: Line.ts  LinePathFinder.ts  LineValidator.ts  LocAngle.ts  LocShape.ts  NaivePathFinder.ts  PathFinder.ts  RayCast.ts  Route.ts  RouteCoordinates.ts  StepValidator.ts  block_flag.rs  collision.rs  collision_flag.rs  collision_strategy.rs  coord_grid.rs  debug.d.ts  debug.js  debug.wasm  debug.wasm.map  debug.wat  direction_flag.rs  line.rs  line_pathfinder.rs  line_validator.rs  loc_angle.rs  loc_layer.rs  loc_shape.rs  naive_pathfinder.rs  pathfinder.rs  step_validator.rs
test/rsmod/: LinePathFinder.test.ts  LineValidator.test.ts  NaivePathFinder.test.ts  (+2 more)
tests/: collision.rs  line_pathfinder.rs  line_validator.rs  mod.rs  pathfinder.rs  reach_strategy.rs  rectangle_boundary.rs  rectangular_reach_strategy.rs  rotation.rs  step_validator.rs
(+26 files in other folders)
