[package]
name = "rsmod-pathfinder"
version = "5.0.2"
edition = "2021"
authors = ["2004Scape"]
description = "A breadth-first search path finder."
license = "ISC"
repository = "https://github.com/2004scape/rsmod-pathfinder"

[lib]
crate-type = ["cdylib", "lib"]
name = "rsmod"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
wasm-bindgen = "0.2.95"
once_cell = "1.20.2"
serde_json = "1.0.132"
serde = "1.0.210"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

[[bench]]
name = "collision"
harness = false

[[bench]]
name = "pathfinder"
harness = false

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "--generate-global-effects",
    "--optimize-instructions",
    "--memory-packing",
    "--intrinsic-lowering",
    "--flexible-inline-max-function-size",
    "4294967295",
    "--inlining",
    "--inlining-optimizing",
    "-O4",
]
